Edited:Open-Source  Page

--- a/src/styles/pages/_open_source.scss
+++ b/src/styles/pages/_open_source.scss
@@ -1,8 +1,17 @@
 .section-open_source {
 
   &.section-banner {
-    background-color: $olivine;
+    background: transparent url('../images/opensource-banner.jpg') no-repeat center center;
+    background-size: cover;
     min-height: rem(486px);
+
+    @include media-breakpoint-down(md) {
+      min-height: rem(300px);
+    }
+
+    @include media-breakpoint-down(sm) {
+      min-height: rem(200px);
+    }
   }
 
   &.section-content {
@@ -60,11 +69,19 @@
   border: 0 none;
   background-color: $tea-green;
   min-height: rem(268px);
-  margin: 0 0 rem(30px);
+  margin: 0 0 rem(20px);
+  text-align: justify;
+  padding: 0 rem(10px);
+
 
   @include media-breakpoint-down(sm) {
     min-height: unset;
     margin: 0 0 rem(15px);
+  }
+
+  .card-body{
+    position: relative;
+    padding: rem(20px 20px 48px);
   }
 
   .card-title {
@@ -81,5 +98,22 @@
     line-height: rem(21px);
     font-weight: 300;
     letter-spacing: 1px;
+  }
+
+}
+.link-more{
+  position: absolute;
+  right:0;
+  margin-right: 20px;
+  bottom: 20px;
+
+  i{
+    margin-right:8px;
+    font-size:rem(18px);
+  }
+  a{
+    color: $gray-20;
+    text-decoration: none;
+    font-size:rem(14px);
   }
 }
