--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -2,7 +2,7 @@ extends ./layouts/bootstrap.jade
 
 block content
   section.section-open_source.section-banner
-    .container
+
   section#openSource.section-open_source.section-content
     .container
       h2.section-heading Driving Open Source
@@ -12,32 +12,55 @@ block content
           .card.card-note
            .card-body
             h5.card-title Rubyconf India 2018
-            p.card-text RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
+            p.card-text  RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
+            .link-more
+              a(href="https://www.rubyconfindia.org/")
+                i.align-middle.icon-arrow-right
+                | View More
         .col-lg-4.col-md-6.d-flex
           .card.card-note
            .card-body
             h5.card-title Rails Girls Pune 2018
             p.card-text During the one-day workshop for women, we’ll dive into the magical world of Ruby on Rails. The event is aimed at encouraging more women to choose a career in tech, by exposing them to a full stack web development framework like Ruby on Rails.
+            .link-more
+              a(href="http://railsgirls.com/pune.html")
+                i.align-middle.icon-arrow-right
+                | View More
         .col-lg-4.col-md-6.d-flex
           .card.card-note
            .card-body
             h5.card-title Gophercon India 2018
             p.card-text Go is an open source project developed by a team at Google and many contributors from the open source community.
+            .link-more
+              a(href="http://upcomingengineer.com/opportunities/gophercon-india-go-lang-2018/")
+                i.align-middle.icon-arrow-right
+                | View More
         .col-lg-4.col-md-6.d-flex
           .card.card-note
            .card-body
-            h5.card-title Donation Management Software 
-            p.card-text RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
+            h5.card-title Donation Management Software for Seva Sahayog:
+            p.card-text Seva Sahayog Foundation aims at engaging socially conscious corporates, groups and individuals, with NGOs of matching interests. Currently they use receipt books and hard copies for managing donation receipts. Our team developed a responsive APP for managing recipt generation and donation management. This system will be able to reduce the usage of paper by a significant percentage, and will be an important step towards making the Seva Sahayog Foundation office a paperless office.
+            .link-more
+              a(href="https://github.com/joshsoftware/donation_management")
+                i.align-middle.icon-arrow-right
+                | View More
         .col-lg-4.col-md-6.d-flex
           .card.card-note
            .card-body
             h5.card-title SPlat - SMS Platform
-            p.card-text RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
+            p.card-text SPlat is an integration platform to make use of SMS integration really easy. It ensures single point of integration, supports changing vendors without changing code, sending and receiving SMS, scheduled delivery and tagged groups. It isn't a SMS gateway but a generic layer on top of it. It was presented by Gautam at Lone Star Ruby Conference, 2010.
+            .link-more
+              a(href="http://joshsoftware.com/open-source#splat")
+                i.align-middle.icon-arrow-right
+                | View More
         .col-lg-4.col-md-6.d-flex
           .card.card-note
            .card-body
             h5.card-title Ruby Meetup
-            p.card-text RubyConf India is a global event complementing other RubyConf events across the world. This year our event is a 2-day, single track event focused on Ruby Language, Framework and Tools.
+            .link-more
+              a(href="https://www.meetup.com/PuneRubyMeetup/")
+                i.align-middle.icon-arrow-right
+                | View More
       .media-wrap
         h2.media-heading Activities
         ul.list-unstyled.list-media
