--- a/src/styles/pages/_technologies.scss
+++ b/src/styles/pages/_technologies.scss
@@ -1,7 +1,68 @@
 .section-technologies{
 
   &.section-banner{
+    position: relative;
     background-color: $chambray;
-    min-height: rem(825px);
+    // min-height: rem(825px);
+    padding: rem(100px 0 75px);
+
+    @include media-breakpoint-down(sm){
+      padding: rem(70px 0);
+    }
+
+    .svg-wrap {
+      text-align: center;
+      margin: 0 0 rem(70px);
+    }
+
+    .section-heading {
+      text-align: center;
+      text-transform: uppercase;
+      color: $white;
+      letter-spacing: 1px;
+      margin: 0 0 rem(56px);
+
+      @include media-breakpoint-down(sm){
+        font-size: rem(32px);
+        margin: 0 0 rem(40px);
+      }
+    }
+
+    .para{
+      font-weight: 300;
+      color: $white;
+      letter-spacing: 1px;
+      margin: 0 0 rem(30px);
+
+      @include media-breakpoint-down(sm){
+        font-size: rem(14px);
+        line-height: rem(19px);
+        margin: 0;
+      }
+    }
+  }
+}
+
+.technologies-banner-svg {
+  height: rem(350px);
+
+  @include media-breakpoint-down(sm){
+    width: 100%;
+    height: auto;
+  }
+
+  a {
+    cursor: pointer;
+
+    &:hover {
+      
+      .cls-1 {
+        fill: #ffe200;
+      }
+    }
+  }
+
+  .cls-1{
+    fill: $white;
   }
 }
