--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -24,23 +24,19 @@ block content
           ul.list-unstyled.list-media
             li.list-media-item
               .card.card-media
-                img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-                .btn-wrap
-                  a.btn-link(href="https://www.youtube.com/watch?v=6FbmpdJrZxc", target="_blank") https://www.youtube.com/watch?v=6FbmpdJrZxc
+                iframe(src='https://www.youtube.com/embed/6FbmpdJrZxc', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
             li.list-media-item
               .card.card-media
-                img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-                .btn-wrap
-                  a.btn-link(href="https://economictimes.indiatimes.com/tech/software/josh-software-sets-up-two-firms-in-internet-of-things-and-app-development-space/articleshow/51322636.cms", target="_blank") https://economictimes.indiatimes.com/tech/software/josh-software-sets-up-two-firms-in-internet-of-things-and-app-development-space/articleshow/51322636.cms
+                a.btn-link(href="https://economictimes.indiatimes.com/tech/software/josh-software-sets-up-two-firms-in-internet-of-things-and-app-development-space/articleshow/51322636.cms", target="_blank") 
+                  img.card-img(src='./images/newslink_1@2x.jpg', alt='')
+                  
             li.list-media-item
               .card.card-media
-                img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-                .btn-wrap
-                  a.btn-link(href="https://timesofindia.indiatimes.com/city/pune/tackling-food-wastage-the-it-way/articleshow/58841541.cms", target="_blank") https://timesofindia.indiatimes.com/city/pune/tackling-food-wastage-the-it-way/articleshow/58841541.cms
+                a.btn-link(href="https://timesofindia.indiatimes.com/city/pune/tackling-food-wastage-the-it-way/articleshow/58841541.cms", target="_blank") 
+                  img.card-img(src='./images/newslink_2@2x.jpg', alt='')
             li.list-media-item
               .card.card-media
-                img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-                .btn-wrap
-                  a.btn-link(href="https://www.firstpost.com/tech/news-analysis/startups-stand-to-benefit-most-from-open-source-technologies-by-understanding-it-before-embracing-it-4239439.html", target="_blank") https://www.firstpost.com/tech/news-analysis/startups-stand-to-benefit-most-from-open-source-technologies-by-understanding-it-before-embracing-it-4239439.html
+                a.btn-link(href="https://www.firstpost.com/tech/news-analysis/startups-stand-to-benefit-most-from-open-source-technologies-by-understanding-it-before-embracing-it-4239439.html", target="_blank") 
+                  img.card-img(src='./images/newslink_3@2x.jpg', alt='')
       .btn-wrap
         a.btn.btn-outline-gray(href="contact-us.html") Contact Us
