Open Source Videos

--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -66,24 +66,16 @@ block content
         ul.list-unstyled.list-media
           li.list-media-item
             .card.card-media
-              img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-              .btn-wrap
-                a.btn-link(href="https://youtu.be/OtfyLtsrmCA", target="_blank") https://youtu.be/OtfyLtsrmCA
+              iframe(src='https://www.youtube.com/embed/OtfyLtsrmCA?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
           li.list-media-item
             .card.card-media
-              img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-              .btn-wrap
-                a.btn-link(href="https://youtu.be/8nU08YDOb58", target="_blank") https://youtu.be/8nU08YDOb58
+              iframe(src='https://www.youtube.com/embed/8nU08YDOb58?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
           li.list-media-item
             .card.card-media
-              img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-              .btn-wrap
-                a.btn-link(href="https://youtu.be/N98cnuW0bm0", target="_blank") https://youtu.be/N98cnuW0bm0
+              iframe(src='https://www.youtube.com/embed/N98cnuW0bm0?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
           li.list-media-item
             .card.card-media
-              img.card-img(src='https://dummyimage.com/625x350/626262/626262&text=Placeholder', alt='')
-              .btn-wrap
-                a.btn-link(href="https://youtu.be/e_7qhUMJJ8k", target="_blank") https://youtu.be/e_7qhUMJJ8k
+              iframe(src='https://www.youtube.com/embed/e_7qhUMJJ8k?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
       .btn-wrap
         a.btn.btn-gray(href="team.html") Our Team
         a.btn.btn-outline-gray(href="career.html") Career
