--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -7,9 +7,8 @@ block content
       .img-wrap
         img.img-fluid(src="./images/innovations.png" alt="")
       .info-wrap
-        p.txt-note CodeCuriosity is a platform that encourages contributions to open source. Everyone is rewarded for their efforts, no matter how big or small they are. Our aim is to make open source contribution a habit!
-        p.title So, what’s in it for JOSH?
-        p.lead NOTHING. We call this our anti-startup. “How to lose money consistently and be proud of it!” :D
+        p.title CodeCuriosity is a platform that encourages contributions to open source. Everyone is rewarded for their efforts, no matter how big or small they are. Our aim is to make open source contribution a habit!
+        p.title We call this our anti-startup. “How to lose money consistently and be proud of it!” :D
       .btn-wrap
         a.btn.btn-gray(href="open-source.html") Open Source
         a.btn.btn-outline-gray(href="services.html") Services
