--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -156,7 +156,7 @@ block content
           .card-body
             h2.card-title.text-uppercase iot
             img.card-img(src="./images/iot.png",alt="IOT-Logo")
-            p.card-text Sample text We believe in giving back, we believe in opensource! We always try to encourage, motivate developers to get actively involve into the opensource community and contribute to various projects. Knowing that everyone needs motivation & help for this great work, we always come up with new ideas like Opensource Fridays & codecuriosity.
+            p.card-text With the well-known benefits of AI in the world of technology, we cater to deliver robust IoT-led solutions to our clients aligned with achieving data-driven capitalism. We build simple and smart web-based and mobile-based applications for our clients from different verticals and further help them with utmost assistance and sustainable solutions. 
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
       
@@ -172,7 +172,7 @@ block content
           .card-body
             h2.card-title.text-uppercase Ai
             img.card-img(src='./images/ai.png', alt='AI Logo')
-            p.card-text SAMPLE TEXT Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
+            p.card-text With the well-known benefits of AI in the world of technology, we cater to deliver robust IoT-led solutions to our clients aligned with achieving data-driven capitalism. We build simple and smart web-based and mobile-based applications for our clients from different verticals and further help them with utmost assistance and sustainable solutions. 
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top 
       
@@ -188,7 +188,7 @@ block content
           .card-body
             h2.card-title Cloud
             img.card-img(src='./images/cloud.png', alt='Cloud-logo')
-            p.card-text SAMPLE TEXT goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
+            p.card-text With the well-known benefits of AI in the world of technology, we cater to deliver robust IoT-led solutions to our clients aligned with achieving data-driven capitalism. We build simple and smart web-based and mobile-based applications for our clients from different verticals and further help them with utmost assistance and sustainable solutions. 
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
       
