--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -7,13 +7,12 @@ block content
     .container
       h2.section-heading Our Work
       .card-wrap.-striped
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Quickinsure
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_quickinsure.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text QuickInsure is a specially developed platform for convenience in buying motor vehicle insurance and third party insurance. Buying an insurance for vehicles can sometimes be a time-consuming task for both vehicle owners and the professional who provides insurance policy options available in the market.QuickInsure is a B2C platform which provides that ease and convenience.
                   .link-box
@@ -25,13 +24,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title The Pediatric Network
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_tpn.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text This portal helps the doctors to shorten the consultation time as well as automate the process right from registering the patient till the prescription of drugs and referring the patient to other doctors if need be.
                   .link-box
@@ -43,13 +41,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title We3Health
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_we3health.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text The journey of We3 health started with the birth of Will to Scott Bolick and Brittany Lothe. Will was born premature in the 24 th week of Brittany’s pregnancy at only 770 grams, and he spent his first five months of life in the ICN (Intensive Care Nursery) also called the NICU (Neonatal Intensive Care Unit). They experienced first-hand the complexities and challenges parents face when they have to see their child fighting for his/her life.
                   .link-box
@@ -61,13 +58,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Groupbuzz
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_groupbuzz.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text GroupBuzz is dedicated to creating an optimum end user experience for group owners and members. To achieve this, the owners wanted to build a portal that meets the demands of groups of all shapes and sizes wanting a professional website to manage their members and member payments. They also worked towards making GroupBuzz a platform open for different groups where they can plan various meet ups, activities, exchange ideas and manage payments and accounts hassle free, efficiently and fast.
                   .link-box
@@ -79,13 +75,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Fundamentor
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_fundamentor.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text Fundamentor is an innovative web application that enhances the Quantitative, Verbal, Data inference & Creative thinking aptitude in school students It uses methods which students enjoy, ensuring effective aptitude development.
                   .link-box
@@ -97,13 +92,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Brandscope
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_brandscope.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text Brandscope Pty. Ltd. is focused on providing a streamline solution and maximizes the selling process for suppliers, retailers and agents in Australian fashion and Action Sports industry. Through this platform a supplier gets immediate access to quality retailers using unique and dynamic online tools to launch their brand with speed and efficiency giving them the competitive edge as well as a retailer gets the desired brands where they can view and buy product for their stores.
                   .link-box
@@ -115,13 +109,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Phalcomm
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_phalcom.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text Phalcomm is an E-Commerce Platform which offers online buying of real estate, real time brokerage and generates project specific report. It is used by over 500+ distributor and agents of phalcomm. Software provides real time information of about various bookings in progress across the nation and thus avoid double booking of same property. It also tracks the workflow from booking till allotment of the unit to customer.
                   .link-box
@@ -133,13 +126,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title SimplySmart
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/simplysmart.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text Billing and Management portal which handle hardware devices installed  across multiple sites and based on the data it generate the bill and accept the payments.
                   .link-box
@@ -151,13 +143,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Freedom from Diabetes
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_ffd.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text The Freedom from Diabetes app provides education, inspiration and support to its registered diabetic patients and an unique and easy way to stay connected with Dr. Pramod Tripathi and the team of doctors, dieticians, and mentors in the Freedom from Diabetes program. Also provides a way to manage patients data like medical history, payments etc.
                   .link-box
@@ -169,13 +160,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Deal Signal
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_dealsignal.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text DealSignal provides the most powerful, automated and elegant way to build pipeline on-the-go with a real-time lead feed, leads list, and suggested actions
                   .link-box
@@ -187,13 +177,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top 
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Swalekhan
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_swalekhan.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text This product is ahead of the world. It is 100% accessible Android application used to coach visually challenged kids to learn typying
                   .link-box
@@ -205,13 +194,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Yumbox
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_yumbox.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text Yuhmbox is a weekly subscription service that delivers healthy, organic, ready to eat dinners to schools and offices for busy professional to take home with them
                   .link-box
@@ -223,13 +211,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Get a Limo
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_getalimo.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text This product is build to help Limousine drivers to “page out” jobs if they are busy and give a prompt service to regular customers thus creating a win-win situation for drives themselves, customers and other fellow limo drives
                   .link-box
@@ -241,13 +228,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title SkoutDeals
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_skoutdeals.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text The only deal finding app you’ll ever need! Finding that great deal is a rush. Yet, finding those great deals from local merchants is not easy. Until now. It starts with having all nearby deals in a single location. No more time spent having to hunt through multiple apps, websites, emails, flyers, newspapers, or direct mail to find that great deal. Some call us the best deal-finding app, ever!
                   .link-box
@@ -259,13 +245,12 @@ block content
                       | View Domains
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
-         .card.card-expertise.card-work
+          .card.card-expertise.card-work
             .card-body
               h2.card-title Inmate Aid
               .portfolio-wrap
                 .portfolio-img
-                  img.img-fluid.img-desktop(src="https://dummyimage.com/574x352/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
-                  img.img-fluid.img-mobile(src="https://dummyimage.com/220x450/666666/f3f3f3&text=Placeholder", alt="IOT-Logo")
+                  img.img-fluid.img-desktop(src="./images/prj_inmateaid.png", alt="IOT-Logo")
                 .portfolio-info 
                   p.card-text Help before, during, and after prison. Save money on phone calls. Send magazines, photos, letters, photos, postcards, greeting cards, money.
                   .link-box
