Edited:Career Page

--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -8,19 +8,25 @@ block content
       .jobs-wrap
         h2.wrap-title Job Board
         .jobs
-          h4.title Android Developer
-          p.font-weight-bold Ruby Expert
-          p.font-weight-thin Number of posts - 2
+          h4.title ROR Developer
+          p.font-weight-light Experience : 3+ years
+          p.font-weight-thin Number of posts - 3
           .btn-wrap
             a.btn.btn-outline-white(href="job-description.html") View Details
         .jobs
-          h4.title Android Developer
-          p.font-weight-bold GO Expert
-          p.font-weight-thin Number of posts - 2
+          h4.title Golang Developer
+          p.font-weight-light Experience: minimum 3 years
+          p.font-weight-thin Number of posts - 1
+          .btn-wrap
+            a.btn.btn-outline-white(href="job-description.html") View Details
+        .jobs
+          h4.title React JS Developer
+          p.font-weight-light Experience: minimum 3 years
+          p.font-weight-thin Number of posts - 1
           .btn-wrap
             a.btn.btn-outline-white(href="job-description.html") View Details
       .testimonials-wrap
-        h2.wrap-title Employee Testimonials
+        h2.wrap-title  Testimonials
         .card-wrap.-striped
           .card.card-testimonial
             .card-body
