Edited:Innovation Pge

--- a/src/styles/pages/_innovation.scss
+++ b/src/styles/pages/_innovation.scss
@@ -9,7 +9,7 @@
     }
   
   .display-4{
-    font-weight: 100;
+    font-weight: 300;
     text-transform: uppercase;
     margin: 0 0 rem(24px);
     text-align: center;
@@ -43,7 +43,7 @@
       font-weight: 300;
       margin: 0 0 rem(6px);
       letter-spacing: 1px;
-      text-align: center;
+      text-align: justify;
     }
   }
 }
