--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -2,7 +2,7 @@ extends ./layouts/bootstrap.jade
 
 block content
   section.section-aboutus.section-banner
-    .container
+    img.img-fluid.img-banner(src="./images/gift-group-on-banner.png" alt="")
   section.section-about_info
     .container
       .row
@@ -11,12 +11,13 @@ block content
             h2.wrap-title About Us
             p.wrap-subtitle Our name stands for passion. <br>And, passion for technology <br>is who we are.
             p.para The success of Josh Software is a direct reflection of the magnificent team behind it! Their passion and enthusiasm have been the greatest driving factors and are responsible for every milestone of the brand. Here’s to every individual who has been part of this wonderful journey!
+            img.img-fluid.img-mobile(src="./images/group-photos-mobile.png" alt="")
             .btn-wrap
               a.btn.btn-white(href="team.html") Meet Our Team
               a.btn.btn-outline-white(href="career.html") Job Openings
         .col-lg-6.col-md-12
           .img-wrap
-            img.img-fluid(src="./images/frame.png" alt="")
+            img.img-fluid(src="./images/group-photos-desktop.png" alt="")
   section#news.section-content.section-news
     .container
       .media-wrap
