--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -2,6 +2,11 @@ extends ./layouts/bootstrap.jade
 
 block content
   section.section-career.section-banner
+    .banner-content
+      h1 WE ARE RECRUITING
+      P And you will Love working here!
+      img.img-fluid.img-desktop(src="./images/career-benefits.svg", alt="")
+      img.img-fluid.img-mobile(src="./images/career-benefits-mobile.svg", alt="")
   
   section.section-career.section-content
     .container
