--- a/src/views/inc/footer.jade
+++ b/src/views/inc/footer.jade
@@ -11,7 +11,7 @@ footer.josh-footer
         a.nav-link(href="innovation.html") Innovation
         a.nav-link(href="technologies.html") Technologies
         a.nav-link(href="industries.html") Industries
-        a.nav-link(href="javascript:void(0);") Testimonials
+        a.nav-link(href="testimonial.html") Testimonials
       nav.nav.footer-nav
         a.nav-link(href="about-us.html") Company
         a.nav-link(href="open-source.html") Open Source
