--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -79,7 +79,7 @@ block content
             img.img-fluid(src="./images/brandscope_logo.png", alt="")
 
       .link-box
-        a(href="javascript:void(0);")
+        a(href="testimonial.html")
           i.align-middle.icon-arrow-right
           | View Testimonials
 
@@ -170,7 +170,7 @@ block footer
           a.nav-link(href="innovation.html") Innovation
           a.nav-link(href="technologies.html") Technologies
           a.nav-link(href="industries.html") Industries
-          a.nav-link(href="javascript:void(0);") Testimonials
+          a.nav-link(href="testimonial.html") Testimonials
         nav.nav.footer-nav
           a.nav-link(href="about-us.html") Company
           a.nav-link(href="open-source.html") Open Source
