--- a/src/styles/pages/_innovation.scss
+++ b/src/styles/pages/_innovation.scss
@@ -26,7 +26,8 @@
 
   .info-wrap {
     width: 80%;
-    margin: 0 auto rem(80px);
+    margin: 0 auto rem(30px);
+    height:rem(100px);
 
     @include media-breakpoint-down(md) {
       width: 90%;
@@ -34,7 +35,8 @@
 
     @include media-breakpoint-down(sm) {
       width: 100%;
-      margin: 0 0 rem(40px);
+      margin: 0 0 rem(20px);
+      height:rem(170px);
     }
 
     .title {
@@ -44,6 +46,36 @@
       margin: 0 0 rem(6px);
       letter-spacing: 1px;
       text-align: justify;
+
+      @include media-breakpoint-down(sm) {
+        font-size:rem(14px);
+      }
+    }
+  }
+}
+#carouselInnovation{
+  margin-bottom: rem(80px);
+
+  @include media-breakpoint-down(sm) {
+    margin-bottom: rem(50px);
+  }
+  li{
+    background-color:$white ;
+    border:3px solid rgba($roman,0.5);
+    width:rem(15px);
+    height: rem(15px);
+    border-radius: rem(10px);
+  }
+  img{
+    margin:0 auto;
+    margin-bottom: rem(20px);
+    width:50%;
+  }
+  ol{
+    margin-top:rem(50px) ;
+    bottom: rem(-27px);
+    .active{
+      background-color: $roman;
     }
   }
 }
