--- a/src/styles/pages/_services.scss
+++ b/src/styles/pages/_services.scss
@@ -3,7 +3,29 @@
   &.section-banner{
     background-color: #62AAAC;
     min-height: rem(825px);
+    position: relative;
+    h1{
+      text-transform: uppercase;
+      text-align: center;
+      color: $white;
+      font-weight: 300;
+      padding: rem(70px);
+    }
+
+    .para{
+      font-weight: 300;
+      color: $white;
+      letter-spacing: 1px;
+      margin: 0 0 rem(30px);
+
+      @include media-breakpoint-down(sm){
+        font-size: rem(14px);
+        line-height: rem(19px);
+        margin: 0;
+      }
+    }
   }
+
 
   &.section-content {
 
