--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -3,6 +3,11 @@ extends ./layouts/bootstrap.jade
 block content
   section.section-services.section-banner
     .container
+      h1 What We Do?
+      img.img-fluid(src="./images/services-gear.png", alt="IOT-Logo")
+      p.para We help our clients to build pixel perfect and high-performance tech solutions, that lead to building teams and collaborate further to meet the goals. The aim is to help them disrupt their industries today and lead them into the future. 
+      a.scroll-down.text-white(href="javascript:void(0);")
+        i.icon-angle-double-down
   section#ourWork.section-services.section-content
     .container
       h2.section-heading Our Work
