--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -304,4 +304,72 @@ button:focus {
     
   }
 }
+
+// Parallax Section SCSS
+// .parallaxParent {
+//   height: 100vh;
+//   overflow: hidden;
+//   }
+
+//   .parallaxParent > .bg-parallax {
+//   height: 100%;
+//   position: relative;
+//   top: -50%;
+//   }
 /* shared end */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.homeSlide{
+  height:100vh;
+}
+
+.bcg {
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	height: 100%;
+  width: 100%;
+}
+
+.hsContainer {
+	display: table;
+	table-layout: fixed;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
+}
+
+.hsContent {
+	display: table-cell;
+	vertical-align: middle;
+}
